--- a/Back-end/views/category/byCat.hbs
+++ b/Back-end/views/category/byCat.hbs
@@ -36,6 +36,10 @@
 <!-- /NAV -->
 {{/section}}
 
+<form type="hidden" id="frmAddItem" method="post" action="/account/cart/add">
+	<input type="hidden" name="proId" id="txtP">
+	<input type="hidden" name="quantity" id="txtQ">
+</form>
 
 {{#section 'bodyleft'}}
 <!-- aside Widget -->
