--- a/Back-end/views/producer/byProducer.hbs
+++ b/Back-end/views/producer/byProducer.hbs
@@ -14,6 +14,11 @@
 	</script>
 {{/section}}
 
+<form type="hidden" id="frmAddItem" method="post" action="/account/cart/add">
+	<input type="hidden" name="proId" id="txtP">
+	<input type="hidden" name="quantity" id="txtQ">
+</form>
+
 {{#section 'nav'}}
 <!-- NAV -->
 <li class="active">
