--- a/Back-end/views/account/pay.hbs
+++ b/Back-end/views/account/pay.hbs
@@ -85,7 +85,7 @@
         {{/each}}
         <div class="order-col">
           <div><strong>TỔNG CỘNG</strong></div>
-          <div><strong class="order-total">{{number_format layoutVM.inTotal}}₫</strong></div>
+          <div><strong class="order-total">{{number_format total}}₫</strong></div>
         </div>
         
         
