--- a/Back-end/views/admin/admin.hbs
+++ b/Back-end/views/admin/admin.hbs
@@ -12,15 +12,15 @@
     <link rel="apple-touch-icon" href="apple-icon.png">
     <link rel="shortcut icon" href="favicon.ico">
 
-    <link rel="stylesheet" href="assets_admin/css/normalize.css">
-    <link rel="stylesheet" href="assets_admin/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets_admin/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets_admin/css/themify-icons.css">
-    <link rel="stylesheet" href="assets_admin/css/flag-icon.min.css">
-    <link rel="stylesheet" href="assets_admin/css/cs-skin-elastic.css">
+    <link rel="stylesheet" href="../assets_admin/css/normalize.css">
+    <link rel="stylesheet" href="../assets_admin/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets_admin/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets_admin/css/themify-icons.css">
+    <link rel="stylesheet" href="../assets_admin/css/flag-icon.min.css">
+    <link rel="stylesheet" href="../assets_admin/css/cs-skin-elastic.css">
     <!-- <link rel="stylesheet" href="assets/css/bootstrap-select.less"> -->
-    <link rel="stylesheet" href="assets_admin/scss/style.css">
-    <link href="assets_admin/css/lib/vector-map/jqvmap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets_admin/scss/style.css">
+    <link href="../assets_admin/css/lib/vector-map/jqvmap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 
@@ -35,10 +35,10 @@
                     aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="./">
+                <a class="navbar-brand" href="/home">
                     <img src="/imgs/logo.png" alt="Logo">
                 </a>
-                <a class="navbar-brand hidden" href="./">
+                <a class="navbar-brand hidden" href="/home">
                     <img src="/imgs/logo.png" alt="Logo">
                 </a>
             </div>
