--- a/Back-end/views/admin/admin.hbs
+++ b/Back-end/views/admin/admin.hbs
@@ -22,42 +22,71 @@
     <link rel="stylesheet" href="../assets_admin/scss/style.css">
     <link href="../assets_admin/css/lib/vector-map/jqvmap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+
+
+
+    <!--  Main handlebar css-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+
+		<!-- Bootstrap -->
+		<link type="text/css" rel="stylesheet" href="../assets/css/bootstrap.min.css"/>
+		<!-- 	<link type="text/css" rel="stylesheet" href="css/bootstrap4.css"/> -->
+
+		<!-- Slick -->
+		<link type="text/css" rel="stylesheet" href="../assets/css/slick.css"/>
+		<link type="text/css" rel="stylesheet" href="../assets/css/slick-theme.css"/>
+
+		<!-- nouislider -->
+		<link type="text/css" rel="stylesheet" href="../assets/css/nouislider.min.css"/>
+
+		<!-- Font Awesome Icon -->
+		<link rel="stylesheet" href="../assets/css/font-awesome.min.css">
+
+		<!-- Custom stlylesheet -->
+		<link type="text/css" rel="stylesheet" href="../assets/css/style.css"/>
+		<link type="text/css" rel="stylesheet" href="../assets/css/style1.css">
+		<link type="text/css" rel="stylesheet" href="../assets/css/style-dropdown.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 </head>
 
 
 
 <body>
-    <aside id="left-panel" class="left-panel">
+    <aside id="left-panel" class="left-panel" style="background-color:#e7e7e7">
         <nav class="navbar navbar-expand-sm navbar-default">
 
-            <div class="navbar-header">
+            <div class="navbar-header" style="background-color:#e7e7e7">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/home">
+                <a class="navbar-brand" href="/home" >
                     <img src="/imgs/logo.png" alt="Logo">
                 </a>
-                <a class="navbar-brand hidden" href="/home">
+                <a class="navbar-brand hidden" href="/home" >
                     <img src="/imgs/logo.png" alt="Logo">
                 </a>
             </div>
 
-            <div id="main-menu" class="main-menu collapse navbar-collapse">
+            <div id="main-menu" class="main-menu collapse navbar-collapse" style="background-color:#e7e7e7">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="index.html">
-                            <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+                        <a href="/admin/dashboard" >
+                            <i class="menu-icon fa fa-home" style="color:black"></i><span style="color:black ;font-weight: bold">Dashboard </span></a>
                     </li>
-                    <h3 class="menu-title">Quản lý sản phẩm</h3>
+                    <h3 class="menu-title">Quản lý</h3>
                     <!-- /.menu-title -->
                     <li>
-                        <a href="loaisp.html">
-                            <i class="menu-icon fa fa-book"></i>Loại sản phẩm </a>
+                        <a href="/admin/products">
+                            <i class="menu-icon fa fa-book"></i><span style="color:black ;font-weight: bold">Sản phẩm </span> </a>
                     </li>
                     <li>
                         <a href="nhasanxuat.html">
                             <i class="menu-icon fa fa-book"></i>Nhà sản xuất </a>
+                    </li>
+                    <li>
+                        <a href="nhasanxuat.html">
+                            <i class="menu-icon fa fa-book"></i>Loại sản phẩm </a>
                     </li>
 
                     <h3 class="menu-title">Đơn hàng</h3>
@@ -76,7 +105,7 @@
         </nav>
     </aside>
     <!-- /#left-panel -->
-    <div class="col-lg-12">
+   <!--  <div class="col-lg-12">
         <header id="header" class="header">
             <div class="col-lg-8">
                 <div class="header-menu">
@@ -98,70 +127,54 @@
         </header>
 
     </div>
-    <div class="col-lg-12">
-        <div class="col-lg-6">
-            <div id="piechart"></div>
+    end header -->
+    
 
-            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-            <script type="text/javascript">
-                // Load google charts
-                google.charts.load('current', { 'packages': ['corechart'] });
-                google.charts.setOnLoadCallback(drawChart);
-
-                // Draw the chart and set the chart values
-                function drawChart() {
-                    var data = google.visualization.arrayToDataTable([
-                        ['Task', 'Hours per Day'],
-                        ['Asus', 8],
-                        ['Apple', 2],
-                        ['Macbook', 4],
-                        ['Dell', 4],
-
-                    ]);
-
-                    // Optional; add a title and set the width and height of the chart
-                    var options = { 'title': 'Biểu đồ theo nhà sản xuất', 'width': 550, 'height': 400 };
-
-                    // Display the chart inside the <div> element with id="piechart"
-                    var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-                    chart.draw(data, options);
-                }
-            </script>
-
-        </div>
-        <div class="col-lg-6">
-            <div id="piechart1"></div>
-
-            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-            <script type="text/javascript">
-                // Load google charts
-                google.charts.load('current', { 'packages': ['corechart'] });
-                google.charts.setOnLoadCallback(drawChart);
-
-                // Draw the chart and set the chart values
-                function drawChart() {
-                    var data = google.visualization.arrayToDataTable([
-                        ['Task', 'Hours per Day'],
-                        ['Gaming', 8],
-                        ['Văn phòng', 2],
-                        ['UltraBook', 4],
-                        ['Doanh nhân', 2],
-
-                    ]);
-
-                    // Optional; add a title and set the width and height of the chart
-                    var options = { 'title': 'Biểu đồ theo loại sản phẩm', 'width': 550, 'height': 400 };
-
-                    // Display the chart inside the <div> element with id="piechart"
-                    var chart = new google.visualization.PieChart(document.getElementById('piechart1'));
-                    chart.draw(data, options);
-                }
-            </script>
-
-        </div>
+    <div style="margin-top:50px">
+        <table class="table">
+            <thead class="">
+                <tr>
+                    <th scope="col">STT</th>
+                    <th scope="col">Mã sản phẩm</th>
+                    <th scope="col">Tên sản phẩm</th>
+                    <th scope="col">Số lượng</th>
+                    <th scope="col">Giá bán</th>
+                    <th scope="col">Lượt bán</th>
+                    <th scope="col">Lượt xem</th>
+                    <th scope="col">Ngày thêm</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each Item}}
+                <tr>
+                    <th scope="row">{{ProID}}</th>
+                    <td>{{ProID}}</td>
+                    <td>{{ProName}}</td>
+                    <td>{{Quantity}}</td>
+                    <td>{{Price}}</td>
+                    <td>{{Sales}}</td>
+                    <td>{{Views}}</td>
+                    <td>{{AddDate}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
     </div>
-    <br>
-    <br>
+    <div class="row">
+	<div class="col-md-12 col-xs-12">
+		<div class="store-filter clearfix">
+
+			<ul class="store-pagination">
+			{{#each page_numbers}}
+			{{#if isCurPage}}
+				<li class="active"><a href="javascript:;">{{value}}</a></li>
+			{{else}}
+				<li><a href="?page={{value}}">{{value}}</a></li>
+			{{/if}}
+			{{/each}}
+				<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
+			</ul>
+		</div>
+	</div>
+</div>
 </body>
