--- a/Back-end/views/search/result.hbs
+++ b/Back-end/views/search/result.hbs
@@ -35,6 +35,7 @@
 				<form method="POST" action="/search/advancesearch">
 				<h4>Hãng sản xuất</h4>
 					<select class="input-select" name="optionProdu">
+						<option value="all">Tất cả</option>
 						<option value="Asus">Asus</option>
 						<option value="Dell">Dell</option>
 						<option value="Mac">Mac</option>
@@ -42,6 +43,7 @@
 					</select>
 					<h4>Loại laptop</h4>
 					<select class="input-select" name="optionCat">
+						<option value="all">Tất cả</option>
 						<option value="Laptop Gaming">Laptop Gaming</option>
 						<option value="Laptop Văn phòng">Laptop Văn phòng</option>
 						<option value="Laptop Doanh nhân">Laptop Doanh nhân</option>
@@ -49,6 +51,7 @@
 					</select>
 					<h4>Mức giá</h4>
 					<select class="input-select" name="optionPrice">
+						<option value="100000000">Tất cả</option>
 						<option value="20000000">10-20 triệu</option>
 						<option value="30000000">20-30 triệu</option>
 						<option value="40000000">30-40 triệu</option>
