--- a/Back-end/views/account/cart.hbs
+++ b/Back-end/views/account/cart.hbs
@@ -59,40 +59,45 @@
 </div>
 {{/if}} 
 <div id="store" class="col-md-10">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Sản phẩm</th>
-        <th>Giá</th>
-        <th>Số lượng</th>
-        <th>Tổng số</th>
-        <th>&nbsp;</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each items}}
-      <tr>
-        
-        <td><img src="/imgs/{{product.ProID}}/main.jpg" width="20%" />{{product.ProName}}</td>
-        <td>{{number_format product.Price}}₫</td>
-        <td>{{quantity}}</td>
-        <td>{{number_format amount}}₫</td>
-        <td class="text-right">
-          <a data-proid="{{product.ProID}}" class="btn btn-danger btn-xs removeItem" href="javascript:;" role="button">
-            <span class="fa fa-remove"></span>
-          </a>
-        </td>
-      </tr>
-      {{/each}}
-    </tbody>
-    <tfoot>
-      <tr>
-        <td>&nbsp;</td>
-        <td>Tổng tiền:</td>
-        <td>&nbsp;</td>
-        <td>{{number_format total}}₫</td>
-        <td>&nbsp;</td>
-      </tr>
-    </tfoot>
-  </table>
+  <div class="col-md-12">
+    <div class="section-title">
+        <h3 class="title">Giỏ hàng</h3>
+    </div>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Sản phẩm</th>
+          <th>Giá</th>
+          <th>Số lượng</th>
+          <th>Tổng số</th>
+          <th>&nbsp;</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each items}}
+        <tr>
+          
+          <td><img src="/imgs/{{product.ProID}}/main.jpg" width="20%" />{{product.ProName}}</td>
+          <td>{{number_format product.Price}}₫</td>
+          <td>{{quantity}}</td>
+          <td>{{number_format amount}}₫</td>
+          <td class="text-right">
+            <a data-proid="{{product.ProID}}" class="btn btn-danger btn-xs removeItem" href="javascript:;" role="button">
+              <span class="fa fa-remove"></span>
+            </a>
+          </td>
+        </tr>
+        {{/each}}
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>&nbsp;</td>
+          <td>Tổng tiền:</td>
+          <td>&nbsp;</td>
+          <td>{{number_format total}}₫</td>
+          <td>&nbsp;</td>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 </div>
