--- a/Back-end/views/home/index.hbs
+++ b/Back-end/views/home/index.hbs
@@ -132,7 +132,7 @@
 					<div class="products-slick" data-nav="#slick-nav-2">
 						{{#each layoutbyNew.byNew}}
 						<div class="product">
-								<a href="#">
+								<a href="/product/detail/{{ProID}}">
 									<div class="product-img">
 										<img src="/imgs/{{ProID}}/main.jpg" alt="">
 										<div class="product-label">
