--- a/Back-end/views/_layouts/main.handlebars
+++ b/Back-end/views/_layouts/main.handlebars
@@ -54,6 +54,7 @@
 
 							<li class="dropdown" ><a href="#"><i class="fas fa-bars"></i>Tài khoản của {{layoutVM.curUser.f_Name}}</a>
 								<div class="dropdown-account">
+									<a href="/account/profile/{{layoutVM.curUser.f_ID}}">Thông tin cá nhân</a>
 									<a href="/account/updateinfo/{{layoutVM.curUser.f_ID}}">Cập nhật thông tin cá nhân</a>
 									<a href="/account/cart/{{layoutVM.curUser.f_ID}}">Giỏ hàng</a>
 									<a href="/account/pay/{{layoutVM.curUser.f_ID}}">Thanh toán</a>
