--- a/Back-end/views/account/historypay.hbs
+++ b/Back-end/views/account/historypay.hbs
@@ -11,6 +11,16 @@
   <div class="aside">
     <h3 class="aside-title">Tài khoản</h3>
     <div class="checkbox-filter">
+
+      <div class="input-checkbox">    
+        <a href="">
+          <label for="brand-1">
+            <a href="/account/profile/{{layoutVM.curUser.f_ID}}" target="blank">Thông tin cá nhân
+            </a>
+            
+          </label>
+        </a>
+      </div>
       <div class="input-checkbox">    
         <a href="">
           <label for="brand-1">
