--- a/Back-end/views/admin/adminManagements.hbs
+++ b/Back-end/views/admin/adminManagements.hbs
@@ -29,23 +29,39 @@
             <div class="card card-container">
                 {{#each loadByProducts}}
                     <form method="post">
-                          <div class="form-group">
-                                <label for="ProID">Mã sản phẩm</label>
-                                <input type="text" class="form-control" id="ProID" aria-describedby="text" value="{{ProID}}">
+                          <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                          <label for="ProID">Mã sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProID" aria-describedby="text" value="{{ProID}}">
+                                    </div>
+                                    <div class="form-group">
+                                          <label for="Quantity">Số lượng</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{Quantity}}" width="200px">
+                                    </div>
+                                    <div class="form-group">
+                                          <label for="ProPrice">Giá sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{Price}}">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                          <label for="ProName">Tên sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{ProName}}">
+                                    </div>
+                                    <div class="form-group">
+                                          <label for="ProPrice">Giá sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{Price}}">
+                                    </div>
+                                </div>
                           </div>
+
                           <div class="form-group">
-                                <label for="ProName">Tên sản phẩm</label>
-                                <input type="text" class="form-control" id="ProName" value="{{ProName}}">
+                                <label for="Des">Mô tả sản phẩm</label>
+                                <input type="textarea" class="form-control" id="ProDes" value="{{Des}}">
                           </div>
-                          <div class="form-group">
-                                <label for="Quantity">Số lượng</label>
-                                <input type="text" class="form-control" id="ProName" value="{{Quantity}}" width="200px">
-                          </div>
-                          <div class="form-group">
-                                <label for="ProPrice">Giá sản phẩm</label>
-                                <input type="text" class="form-control" id="ProName" value="{{Price}}">
-                          </div>
-                          <button type="submit" class="btn btn-primary">Submit</button>
+                          
+                          <button type="submit" class="btn btn-primary">Import</button>
                     </form>
                 {{/each}}
             </div><!-- /card-container -->
