admin update order

--- a/Back-end/views/admin/admin.hbs
+++ b/Back-end/views/admin/admin.hbs
@@ -94,7 +94,7 @@
 
 
                     <li>
-                        <a href="TinhTrangDonHang.html">
+                        <a href="/admin/orders">
                             <i class="menu-icon ti-email"></i>Tình trạng đơn hàng</a>
                     </li>
 
