fix form add new

--- a/Back-end/views/admin/adminManagements.hbs
+++ b/Back-end/views/admin/adminManagements.hbs
@@ -58,7 +58,7 @@
 
                           <div class="form-group">
                                 <label for="Des">Mô tả sản phẩm</label>
-                                <input type="textarea" class="form-control" id="ProDes" value="{{Des}}">
+                                <textarea class="form-control" row = "5" id="Des" value="{{Des}}"></textarea>
                           </div>
                           
                           <button type="submit" class="btn btn-primary">Import</button>
