--- a/Back-end/views/admin/admin.hbs
+++ b/Back-end/views/admin/admin.hbs
@@ -128,33 +128,51 @@
 
     </div>
     end header -->
-    <div class="row">
-        <div style="margin-left: 70px">
-            {{!-- {{#each loadByProducts}} --}}
-                <img id="profile-img" class="profile-img-card" src="/imgs/logo.png" width="150px" height="80px" />
-                <p id="profile-name" class="profile-name-card"></p>
-                <form method="post">
-                      <div class="form-group">
-                            <label for="ProID">Mã sản phẩm</label>
-                            <input type="text"  style="width=80%" class="form-control" id="ProID" aria-describedby="text" value="">
-                      </div>
-                      <div class="form-group">
-                            <label for="ProName">Tên sản phẩm</label>
-                            <input type="text" class="form-control" id="ProName" value="">
-                      </div>
-                      <div class="form-group">
-                            <label for="Quantity">Số lượng</label>
-                            <input type="text" class="form-control" id="ProName" value="">
-                      </div>
-                      <div class="form-group">
-                            <label for="ProPrice">Giá sản phẩm</label>
-                            <input type="text" class="form-control" id="ProName" value="">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            {{!-- {{/each}} --}}
-        </div>
-    </div>
+   <div class="row">
+
+ 
+   <div class="container-fluid">
+            <div class="card card-container">
+                {{#each loadByProducts}}
+                    <form method="post">
+                          <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                          <label for="ProID">Mã sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProID" aria-describedby="text" value="{{ProID}}">
+                                    </div>
+                                    <div class="form-group">
+                                          <label for="Quantity">Số lượng</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{Quantity}}" width="200px">
+                                    </div>
+                                    <div class="form-group">
+                                          <label for="ProPrice">Giá sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{Price}}">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                          <label for="ProName">Tên sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{ProName}}">
+                                    </div>
+                                    <div class="form-group">
+                                          <label for="ProPrice">Giá sản phẩm</label>
+                                          <input type="text" class="form-control" id="ProName" value="{{Price}}">
+                                    </div>
+                                </div>
+                          </div>
+
+                          <div class="form-group">
+                                <label for="Des">Mô tả sản phẩm</label>
+                                <textarea class="form-control" row = "5" id="Des" value="{{Des}}"></textarea>
+                          </div>
+                          
+                          <button type="submit" class="btn btn-primary">Import</button>
+                    </form>
+                {{/each}}
+            </div><!-- /card-container -->
+        </div><!-- /container -->
+          </div>
     {{!-- <div class="row"> --}}
     <div class="row" style="margin-left:40px; margin-right: 40px; margin-top: 50px">
         <table class="table">
