--- a/Back-end/views/admin/byCatAdmin.hbs
+++ b/Back-end/views/admin/byCatAdmin.hbs
@@ -128,6 +128,31 @@
 
     </div>
     end header -->
+    <div class="row">
+    <div class="col-md-12">
+        
+            <!-- Add new disease -->
+            <h4 style="margin-top: 50px;margin-bottom:50px">Thêm loại sản phảm mới vào hệ thống</h4>
+            <form action="/admin/categories/add" method="post">
+                <div class="form-group row">
+                    <label class="col-md-3 col-form-label">Mã loại</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="CatID" required="true" placeholder="Nhập mã loại sản phẩm">
+                    </div>
+                </div>
+
+                <!-- Last name input -->
+                <div class="form-group row">
+                    <label class="col-md-3 col-form-label">Tên loại</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="CatName" required="true" placeholder="Nhập tên loại sản phẩm">
+                    </div>
+                </div>
+
+            	<input class="btn btn-success" style="float: right;margin-right:200px" type="Submit" name="Submit" value="Thêm">
+            </form>
+        </div>
+    </div>
     
 
     <div style="margin-top:50px">
@@ -140,14 +165,13 @@
             </thead>
             <tbody>
                 {{#each Item}}
-                <tr>
+                <tr >
+                    <form action="/admin/categories/delete" method="POST">
                     <td>{{CatID}}</td>
-                    <td>{{CatName}}</td>
-                    {{!-- <td>
-                        <form action="/add" method="get">
-                        <input type="submit" value="+">
-                        </form>
-                    </td> --}}
+                    <input type="hidden" name="id" value="{{CatID}}">
+                    <td>{{CatName}}</td> 
+                    <td><input class="btn btn-success" style="float: right;margin-right:200px ; margin-top:0px" type="Submit" name="Submit" value="Xóa" ></td>
+                    </form>
                 </tr>
                 {{/each}}
             </tbody>
